# ser-transformer

./: README.md  pyproject.toml
configs/: crema_d_baseline.yaml
data/: dataset.py  features.py  sampler.py
models/: pooling.py  transformer_ser.py
tests/: test_smoke.py
train/: cli_train.py  trainer.py
utils/: metrics.py  seed.py  visualise.py
