[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ser-transformer"
version = "0.1.0"
description = "Transformer-based speech-emotion recognition (CREMA-D baseline)"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "librosa>=0.10",
    "soundfile",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
